--- a/src/components/MakeARunForIt.css
+++ b/src/components/MakeARunForIt.css
@@ -33,9 +33,10 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .card{
-    width: 25vw;
+    width: 100vw;
     padding: 1em;
     margin: 1em;
+    color: #0593B3;
     border: 1x solid gray;
 }
 
