--- a/src/components/MakeARunForIt.css
+++ b/src/components/MakeARunForIt.css
@@ -33,9 +33,9 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 .card{
-    width: 100vw;
-    padding: 1em;
-    margin: 1em;
+    width: 99vw;
+    padding: .75em;
+    margin: .5em;
     color: #0593B3;
     border: 1x solid gray;
 }
@@ -57,4 +57,18 @@ img{
 }
 div {
     color: #ebebeb; 
+}
+
+div.card-header {
+    color:#0593B3;
+}
+
+div.card-body {
+    background-color: #0593B3;
+    color: #ebebeb;
+    font-weight: bold;
+}
+
+.card-body.button.alignRight{
+    text-align: right;
 }
