--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -3,13 +3,31 @@
     background-color: #0f6b8d;
 }
 
+.navbar.navbar-expand.navbar-light {
+    width: 100vw; 
+}
 .Nav-link {
     color: #ebebeb;
+    
+}
+
+div.dropdown-menu.show {
+  width: 20px;
+  margin: 0;
+  
+}
+
+a.dropdown-item {
+  padding: 0;
+}
+
+a#collapsible-nav-dropdown {
+  color: #ebebeb;
 }
 
 .Navbar.Brand {
     font-size: 30px;
-    color: #f3532b
+    color: #f3532b;
 }
 small {
     font-size: 75%;
@@ -40,6 +58,7 @@ small {
     box-sizing: border-box;
     background-color: cornflowerblue;
     list-style-type: none;
+    display: inline-block;
   }
   
   nav .container a {
@@ -51,5 +70,5 @@ small {
   }
 
   .justify-content-end{
-      margin-left: 35vw;
+      margin-left: 30vw;
   }
