--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -31,7 +31,9 @@ ul
     text-transform: uppercase;
     text-align: center;
     padding: 0 0 200px;
+    background-image: url(./marathon.png);
 }
+
 
 /*.take-input {
   margin: 50px 0 0;
