--- a/src/components/MakeARunForIt.css
+++ b/src/components/MakeARunForIt.css
@@ -76,3 +76,7 @@ div.card-body {
 .card-body.button.alignRight{
     text-align: right;
 }
+
+.table-hover tbody tr:hover td {
+    background: #f3532b;
+}
