--- a/src/components/nav/NavBar.css
+++ b/src/components/nav/NavBar.css
@@ -1,6 +1,6 @@
 
 #bootstrap-override-navbar {
-    background-color: #0f6b8d;
+    background-color: #0593b3;
 }
 
 .navbar.navbar-expand.navbar-light {
@@ -66,7 +66,7 @@ small {
   }
   
   nav .container a:hover {
-    color: maroon;
+    color: #f3532b;
   }
 
   .justify-content-end{
